--- a/app/untitled/mainwindow.ui
+++ b/app/untitled/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>867</width>
-    <height>828</height>
+    <height>834</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -790,6 +790,36 @@ QPushButton:hover{
      </layout>
     </item>
     <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_9">
+      <item>
+       <widget class="QRadioButton" name="CommonArea">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Common Area</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="ResizeMerge">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Resize Both</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QRadioButton" name="radioButton">
@@ -925,8 +955,8 @@ QPushButton:hover{
         </property>
         <property name="minimumSize">
          <size>
-          <width>107</width>
-          <height>30</height>
+          <width>150</width>
+          <height>50</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -937,7 +967,7 @@ QPushButton:hover{
         </property>
         <property name="styleSheet">
          <string notr="true">QPushButton{
-	border-radius: 15%;
+	border-radius: 24px;
 }</string>
         </property>
         <property name="text">
